--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 25
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "com.thoughtworks.retailshop"
@@ -20,24 +21,26 @@ android {
 
 dependencies {
     //Material design
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:recyclerview-v7:23.4.0'
-    compile 'com.android.support:cardview-v7:23.4.0'
-    compile 'com.android.support:palette-v7:23.4.0'
-    compile 'com.android.support:support-v4:23.4.0'
 
-    compile 'com.google.code.gson:gson:2.4'
-    compile 'ch.acra:acra:4.8.5'
     compile files('libs/com.google.guava_1.6.0.jar')
+
+    //Loading animations
+
+
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:palette-v7:25.3.1'
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.google.code.gson:gson:2.4'
+    compile 'com.google.firebase:firebase-core:10.0.1'
+    compile 'ch.acra:acra:4.8.5'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.flaviofaria:kenburnsview:1.0.7'
-
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
-
-    //Loading animations
     compile 'com.wang.avi:library:1.0.5'
     compile 'com.nineoldandroids:library:2.4.0'
-
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
